--- a/config/config.ini
+++ b/config/config.ini
@@ -6,7 +6,7 @@ AppMode = debug
 HttpPort = :3000
 
 [database]
-DbHost = localhost
+DbHost = 127.0.0.1
 DbPort = 3306
 DbUser = zhuli
 DbPassword = zhuli
